<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".PersonalAreaWindow">


    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:srcCompat="@drawable/icons8_account_100" />

    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:hint="@string/nameHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhoto"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastNameTextView"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/lastNameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhoto" />

    <Button
        android:id="@+id/buttonSingOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/singOutText"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@+id/userPhoto"
        app:layout_constraintTop_toTopOf="@+id/userPhoto" />

    <ImageButton
        android:id="@+id/buttonSetPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="@+id/userPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userPhoto"
        app:layout_constraintTop_toTopOf="@+id/userPhoto"
        app:srcCompat="@drawable/icons8_gallery_48"/>

    <EditText
        android:id="@+id/heightTextView"
        android:layout_width="80dp"
        android:hint="@string/heightText"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <EditText
        android:id="@+id/weightTextView"
        android:layout_width="80dp"
        android:hint="@string/weightText"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/yearsTextView"
        app:layout_constraintStart_toEndOf="@+id/heightTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <EditText
        android:id="@+id/yearsTextView"
        android:layout_width="80dp"
        android:hint="@string/yearsText"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="number"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTextView" />

    <Button
        android:id="@+id/buttonSaveInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/saveInfoText"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTextView" />

    <TextView
        android:id="@+id/textViewApplications"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/applicationsText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveInfo" />

    <Button
        android:id="@+id/buttonAddApplications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/addApplicationsButtonText"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/textViewApplications"
        app:layout_constraintTop_toBottomOf="@+id/textViewApplications" />


</androidx.constraintlayout.widget.ConstraintLayout>