<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginWindow">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/EmailTextInLoginWindow"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:ems="10"
        android:hint="@string/PasswordTextInLoginWindow"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="270dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/AuthTextInLoginWindow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="270dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/RegistrationTextInLoginAct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAuth" />

</androidx.constraintlayout.widget.ConstraintLayout>