<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateApplications">

    <EditText
        android:id="@+id/editTextTarget"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:maxLines="7"
        android:inputType="textMultiLine"
        android:hint="@string/targetText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerPlace"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:entries="@array/place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTarget" />

    <Spinner
        android:id="@+id/spinnerLvLTraining"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/lvlOfTraining"
        app:layout_constraintTop_toBottomOf="@+id/editTextTarget" />

    <EditText
        android:id="@+id/editTextTrainingTime"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:maxLines="7"
        android:inputType="textMultiLine"
        android:hint="@string/trainingTimeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPlace" />

    <EditText
        android:id="@+id/editTextDopInfo"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:maxLines="7"
        android:inputType="textMultiLine"
        android:hint="@string/textDopInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTrainingTime" />

    <Button
        android:id="@+id/buttonSaveApplications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/saveInfoText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>